--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="header__bottom">
         <div class="header__bottom__container">
           <div class="header__bottom__container__column column__left">
-            <span class="header__bottom__container__column__button">Каталог</span>
+            <span class="header__bottom__container__column__button" alt="Каталог">Каталог</span>
           </div>
           <div class="header__bottom__container__column column__center">
             <a class="header__bottom__container__column__logo" href="/"><svg class="header__bottom__container__column__logo__image"><use href="./images/sprite.svg#logo"></use></svg></a>
