--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="header__bottom__container__column__button" alt="Каталог">Каталог</span>
           </div>
           <div class="header__bottom__container__column column__center">
-            <a class="header__bottom__container__column__logo" href="/"><svg class="header__bottom__container__column__logo__image"><use href="./images/sprite.svg#logo"></use></svg></a>
+            <a class="header__bottom__container__column__logo" href="/" alt="ТехноЗум"><svg class="header__bottom__container__column__logo__image"><use href="./images/sprite.svg#logo"></use></svg></a>
           </div>
           <div class="header__bottom__container__column column__right">
             <ul class="header__services__list">
