Плитка категорий на главной

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <ul class="categories__tiles">
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
-              <img class="categories__tiles__item__link__image" src="./images/main-tiles/appliances.jpg" alt="Бытовая техника" />
+              <img class="categories__tiles__item__link__image" src="./images/main-tiles/appliances.png" alt="Бытовая техника" />
               <span class="categories__tiles__item__link__text">Бытовая техника</span>
             </a>
           </li>
