Скролл для брендов переведен на css

--- a/index.html
+++ b/index.html
@@ -203,6 +203,27 @@
           <li class="brands__list__item">
             <img class="brands__list__item__image" src="./images/brands/dji.png" />
           </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/belkin.png" />
+          </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/samsung.png" />
+          </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/audio-technica.png" />
+          </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/bowers_n_wilkins.png" />
+          </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/logitech.png" />
+          </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/xbox.png" />
+          </li>
+          <li class="brands__list__item">
+            <img class="brands__list__item__image" src="./images/brands/bose.png" />
+          </li>
         </ul>
       </section>
       <section class="suggestions">
